# utils-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
delegate_derive/: Cargo.toml
delegate_derive/src/: derive.rs  lib.rs  register.rs
delegate_derive/tests/: 01-normal.rs  02-partial.rs  progress.rs
diffus_derive/: Cargo.toml
diffus_derive/src/: lib.rs
diffus_derive/tests/: 01-old.rs  progress.rs
generic_instance_derive/: Cargo.toml
generic_instance_derive/src/: lib.rs
generic_instance_derive/tests/: 01-generic.rs  02-custom.rs  progress.rs
just_diff/: Cargo.toml
just_diff/src/: lib.rs
just_diff_derive/: Cargo.toml
just_diff_derive/src/: lib.rs
just_diff_derive/tests/: 01-normal.rs  progress.rs
serde_nom/: Cargo.toml
serde_nom/src/: binary_serialize.rs  lib.rs  text_serialize.rs
serde_nom_derive/: Cargo.toml
serde_nom_derive/src/: lib.rs
serde_nom_derive/tests/: 01-struct.rs  02-enum.rs  progress.rs
syn_generics/: Cargo.toml
syn_generics/src/: generic.rs  lib.rs  syn_impl.rs
syn_generics_derive/: Cargo.toml
syn_generics_derive/src/: lib.rs
syn_generics_derive/tests/: 01-normal.rs
